--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@babel/preset-env": "7.1.6",
     "@babel/preset-typescript": "7.1.0",
     "@types/jest": "23.3.9",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-jest": "^23.6.0",
     "cross-env": "5.2.0",
     "jest": "23.6.0",
     "jest-cli": "23.6.0",
